<resources>
    <string name="app_name">SimposioBuro</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_nombre">Nombre(s)</string>
    <string name="hint_apaterno">Apellido Paterno</string>
    <string name="hint_amaterno">Apellido Materno</string>
    <string name="hint_confirma_correo">Confirma correo electrónico</string>
    <string name="hint_empresa">Empresa</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_spinner">¿Deseas participar en los talleres?</string>


    <string name="f1">13 de julio - Talleres</string>
    <string name="f2">14 de julio - Plenaria</string>
    <string name="f3">13 y 14 de Julio - Talleres y Plenaria</string>
    <string name="tv_13de_Julio">Talleres\n13 de julio</string>
    <string name="tv_talleres">Talleres</string>
    <string name="tv_talleres_note">Asegura tu lugar en los talleres de interés. Cupo limitado.</string>
    <string name="tv_conferencias">Conferencias</string>
    <string name="tv_14_de_julio">14 de julio</string>
    <string name="al_dar_clic">Al dar clic en \"Registrarme\" estás aceptando el</string>
    <string name="aviso_privacidad">Aviso de Privacidad</string>
    <string name="registrarme">Registrarme</string>
    <string name="tv_la_industria_crediti">¡Te damos la bienvenida al SIMPOSIO BURÓ 2023!</string>
    <string name="tv_el_conocimiento_avanza">La industria crediticia se redefine y el conocimiento avanza.</string>
    <string name="home_title">INICIO</string>
    <string name="home_agenda">AGENDA</string>
    <string name="home_ponentes">PONENTES</string>


    <string-array name="Respuestas">

        <item>@string/f1</item>
        <item>@string/f2</item>
        <item>@string/f3</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_descargas">DESCARGAS</string>
    <string name="tv_the_st_regis_m_xico_city">The St. Regis México City</string>
    <string name="tv_descubre_c_mo_llegar">Descubre cómo llegar</string>
    <string name="tv_horario">16:00</string>
    <string name="tv_horario_empty">16:00\n16:45</string>
    <string name="tv_aun_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="tv_lorem_ipsu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="dialog_cerrar_sesion">¿Seguro que desea cerrar sesión?</string>
    <string name="dialog_salir_confirm">si</string>
    <string name="dialog_cancel_confirm">cancelar</string>
    <string name="dialog_ok">entendido</string>
    <string name="helper_required">Requerido</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="registro_no_exitoso">Revise los campos requeridos</string>
    <string name="hint_puesto">Puesto</string>


</resources>