<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".registrarModule.RegistrarUsuario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/common_padding_middle"
        android:layout_marginStart="48dp">

        <ImageView
            android:id="@+id/logo_buro"
            android:layout_width="250dp"
            android:layout_height="88dp"
            android:paddingTop="32dp"
            android:src="@drawable/logo_buro_de_credito"
             />

        <ImageView
            android:id="@+id/logo_simposio"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingBottom="15dp"
            android:src="@drawable/logo_simposio" />
        <TextView
            android:id="@+id/tv_regresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿Ya estás registrado? Ingresa aquí"
            android:textColor="@color/rosa_principal"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="13sp"
            app:flow_verticalAlign="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="Registro"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="23sp"
            app:flow_verticalAlign="center"
            android:textColor="@color/rosa_principal"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAPaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apaterno"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"


                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAPaterno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAMaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_amaterno"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"

                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAMaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCorreoElectronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_correo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"

                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCorreoElec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmaCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirma_correo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmaCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_empresa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_marginTop="@dimen/common_padding_default"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPuesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_puesto"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPuesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telefono"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/conter_max_Phone"
                    android:inputType="phone"
                    />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Día de asistencia"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="@dimen/common_padding_default"
                    >

                <AutoCompleteTextView
                    android:id="@+id/etTalleres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lbl1"
                    android:visibility="gone"
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_13de_Julio"
                    android:textColor="@color/rosa_principal"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="23sp"
                    app:flow_verticalAlign="center"

                    />
                <TextView
                    android:id="@+id/lbl2"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_talleres_note"
                    android:textColor="@color/gris_textos_eobs"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="16sp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    app:flow_verticalAlign="center"
                    />

                <!-- androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" / -->
                <LinearLayout
                    android:id="@+id/card_holder"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="@dimen/common_padding_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/al_dar_clic"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="15sp"
                    app:flow_verticalAlign="center"
                    android:textColor="@color/gris_textos_eobs"

                    />
                <TextView
                    android:id="@+id/tvAviso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/aviso_privacidad"

                    android:textColor="@color/azul_principal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="15sp"
                    app:flow_verticalAlign="center"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registrarme"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarme"
                    android:layout_marginTop="@dimen/common_padding_default"

                    app:cornerRadius="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_bold"

                    android:backgroundTintMode="screen"
                    android:backgroundTint="@color/azul_principal"
                    />




            </LinearLayout>









</androidx.core.widget.NestedScrollView>