<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main"
    tools:context=".fragmentsModule.homeFragment.HomeFragment"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        android:layout_marginTop="110dp"
        >



        <ImageView
            android:id="@+id/logo_simposio"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/logo_simposio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_la_industria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/tv_la_industria_crediti"
            android:textColor="@color/rosa_principal"
            android:textSize="12sp"


            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="@id/logo_simposio"
            app:layout_constraintStart_toStartOf="@id/logo_simposio"
            app:layout_constraintTop_toBottomOf="@id/logo_simposio" />

        <TextView
            android:id="@+id/tv_cono_avanza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/tv_el_conocimiento_avanza"
            android:textColor="@color/rosa_principal"
            android:textSize="12sp"

            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="@id/logo_simposio"
            app:layout_constraintStart_toStartOf="@id/logo_simposio"
            app:layout_constraintTop_toBottomOf="@id/tv_la_industria"

            />

        <TextView
            android:id="@+id/tv_descubre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="Descubre las últimas tendencias financieras"



            app:layout_constraintEnd_toEndOf="@id/logo_simposio"
            app:layout_constraintStart_toStartOf="@id/logo_simposio"
            app:layout_constraintTop_toBottomOf="@id/tv_cono_avanza"


            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            app:flow_verticalAlign="center"
            android:textColor="@color/gris_textos_eobs"



            />

        <TextView
            android:id="@+id/tv_y_conecta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="¡y conecta con expertos de renombre mundial!"


            android:fontFamily="@font/montserrat_bold"
            android:textSize="12sp"
            app:flow_verticalAlign="center"
            android:textColor="@color/gris_textos_eobs"




            app:layout_constraintEnd_toEndOf="@id/logo_simposio"
            app:layout_constraintStart_toStartOf="@id/logo_simposio"
            app:layout_constraintTop_toBottomOf="@id/tv_descubre"

            />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_13_de_julio"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_card_height"
            android:layout_marginStart="@dimen/common_padding_min"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"

            app:layout_constraintEnd_toStartOf="@+id/cv_14_de"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_y_conecta"

            android:layout_margin="@dimen/common_padding_min"
            app:cardCornerRadius="40dp"
            android:elevation="@dimen/common_padding_middle"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_person_chalkboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_13_Julio"
                    android:textColor="@color/azul_principal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_talleres"
                    android:textColor="@color/azul_secundario"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_14_de"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_card_height"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"

            android:layout_margin="@dimen/common_padding_min"
            app:cardCornerRadius="40dp"
            android:elevation="@dimen/common_padding_middle"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_13_de_julio"
            app:layout_constraintTop_toBottomOf="@+id/tv_y_conecta"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_screen_users" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_14_de_julio"

                    android:textColor="@color/azul_principal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_conferencias"
                    android:textColor="@color/azul_secundario"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_The_St_"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_card_height"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_middle"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_14_de"
            app:layout_constraintBottom_toBottomOf="parent"

            app:cardCornerRadius="40dp"
            android:elevation="@dimen/common_padding_middle"
            android:layout_marginBottom="100dp"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_map_location_dot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_the_st_regis_m_xico_city"

                    android:textColor="@color/azul_principal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_descubre_c_mo_llegar"

                    android:textColor="@color/azul_secundario"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="12sp"
                    app:flow_verticalAlign="center"

                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.core.widget.NestedScrollView>



